View Issue Details

IDProjectCategoryView StatusLast Update
0023651Open CASCADEOCCT:Modeling Algorithmspublic2013-04-29 15:22
ReporterssvAssigned Tojgv 
PrioritynormalSeveritymajor 
Status closedResolutionfixed 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023651: Exception on fillet construction between NURBS and surface of revolution
DescriptionBRepFilletAPI_MakeFillet crashes when attempting to make a fillet on the attached shell. The source edges are those shared between surface of revolution and blade surface (see screenshot).
Steps To Reproducerestore turbine_shell_one_edge.brep a
explode a e
donly a a_4
fit
blend res1 a 1 a_4

restore turbine_shell_one_edge.brep a
explode a e
donly a a_4
fit
mkevol res2 a
updatevol a_4 0. 1.5 0.05 1 0.45 1 0.5 1.5 0.55 2 0.95 2 1. 1.5
buildevol
TagsNo tags attached.
Test case numberbugs modalg(006) bug23651_1, bug23651_2

Attached Files

  • turbine_shell.zip (541,710 bytes)
  • fillet_crash.png (89,574 bytes)
  • turbine_shell_one_edge.zip (545,655 bytes)

Activities

ssv

2012-12-19 10:01

developer  

turbine_shell.zip (541,710 bytes)

ssv

2012-12-19 10:02

developer  

fillet_crash.png (89,574 bytes)

ssv

2012-12-19 16:31

developer  

turbine_shell_one_edge.zip (545,655 bytes)

jgv

2013-01-09 17:29

developer   ~0022920

The branch CR23651_2 is ready for reviewing

pkv

2013-01-10 06:35

developer   ~0022923

Reviewed

mkv

2013-01-17 14:51

tester   ~0023002

Dear BugMaster,

Branch CR23651_2 (and products from GIT master) was compiled on Linux and
Windows platforms and tested.

Regressions:
Not detected

Improvements:
Not detected

Testing cases:
Not needed
bugs modalg(006) bug23651_1, bug23651_2 - OK.

Related Changesets

occt: master ea9632bc

2013-01-18 09:42:52

jgv

Details Diff
0023651: Exception on fillet construction between NURBS and surface of revolution

Adding test cases for this fix
Affected Issues
0023651
mod - src/ChFi3d/ChFi3d_Builder_6.cxx Diff File
add - tests/bugs/modalg/bug23651_1 Diff File
add - tests/bugs/modalg/bug23651_2 Diff File

Issue History

Date Modified Username Field Change
2012-12-19 10:01 ssv New Issue
2012-12-19 10:01 ssv Assigned To => jgv
2012-12-19 10:01 ssv File Added: turbine_shell.zip
2012-12-19 10:02 ssv File Added: fillet_crash.png
2012-12-19 16:31 ssv File Added: turbine_shell_one_edge.zip
2013-01-09 17:29 jgv Note Added: 0022920
2013-01-09 17:29 jgv Status new => resolved
2013-01-09 17:30 jgv Assigned To jgv => pkv
2013-01-09 18:05 jgv Steps to Reproduce Updated
2013-01-10 06:35 pkv Note Added: 0022923
2013-01-10 06:36 pkv Assigned To pkv => mkv
2013-01-10 08:49 abv Status resolved => reviewed
2013-01-14 17:22 jgv Steps to Reproduce Updated
2013-01-17 14:51 mkv Note Added: 0023002
2013-01-17 14:55 mkv Test case number => bugs modalg(006) bug23651_1, bug23651_2
2013-01-17 14:55 mkv Assigned To mkv => bugmaster
2013-01-17 14:55 mkv Status reviewed => tested
2013-01-21 18:29 jgv Changeset attached => occt master ea9632bc
2013-01-21 18:29 jgv Assigned To bugmaster => jgv
2013-01-21 18:29 jgv Status tested => verified
2013-01-21 18:29 jgv Resolution open => fixed
2013-02-20 10:19 bugmaster Target Version => 6.6.0
2013-04-23 13:36 aiv Status verified => closed
2013-04-29 15:22 aiv Fixed in Version => 6.6.0