0023651: Exception on fillet construction between NURBS and surface of revolution

Adding test cases for this fix